--- a/app/src/main/res/layout/post_activity.xml
+++ b/app/src/main/res/layout/post_activity.xml
@@ -21,7 +21,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/Password"
+        android:id="@+id/Apellido"
         android:hint="Apellido"
         android:layout_marginTop="47dp"
         android:layout_below="@+id/Nombre"
@@ -32,7 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/email"
-        android:layout_below="@+id/Password"
+        android:inputType="textEmailAddress"
+        android:layout_below="@+id/Apellido"
         android:layout_centerHorizontal="true"
         android:hint="E-mail"
         android:layout_marginTop="58dp" />
@@ -40,7 +41,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/Pais"
+        android:id="@+id/Servicio"
         android:layout_below="@+id/email"
         android:layout_centerHorizontal="true"
         android:hint="Servicio"
@@ -49,9 +50,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Enviar"
         android:id="@+id/btnPost"
-        android:layout_below="@+id/Pais"
+        android:layout_below="@+id/Servicio"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="49dp" />
 </RelativeLayout>
