--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -12,6 +12,12 @@
         android:id="@+id/txtQuery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    
+
+    <fragment
+        android:id="@+id/map"
+        android:layout_below="@+id/txtQuery"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.SupportMapFragment"/>
 
 </RelativeLayout>
